--- a/cpp/workspace/project/CMakeLists.txt
+++ b/cpp/workspace/project/CMakeLists.txt
@@ -1,11 +1,13 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
 project(MyProject)
 
-set(CMAKE_CXX_STANDARD 17)
-
 include_directories(include)
+find_package(ZLIB REQUIRED)
 
-add_executable(my_project
-    src/main.cpp
-    src/greeter.cpp
+message("Building with CMake version: ${CMAKE_VERSION}")
+
+add_executable(test003
+    src/test003.cpp
 )
+target_link_libraries(test003 ZLIB::ZLIB)
+
